[gd_scene load_steps=9 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Mob.tscn" type="PackedScene" id=2]
[ext_resource path="res://dodge_assets/art/galaxy.jpg" type="Texture" id=3]
[ext_resource path="res://Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=5]
[ext_resource path="res://dodge_assets/art/House In a Forest Loop.ogg" type="AudioStream" id=6]
[ext_resource path="res://dodge_assets/art/gameover.wav" type="AudioStream" id=7]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -2.26465, 3.02625, 0, 0, 0, 0, 1499.67, 3.02625, 0, 0, 0, 0, 1503.66, 1001.65, 0, 0, 0, 0, -6.25916, 1001.65, 0, 0, 0, 0, -2.26465, 3.02625 )
}

[node name="Main" type="Node"]
script = ExtResource( 1 )
Mob = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 772.906, 501.307 )
scale = Vector2( 0.93, 0.93 )
texture = ExtResource( 3 )

[node name="Player" parent="." instance=ExtResource( 4 )]
visible = false

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 750, 500 )

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2( -2.26465, 3.02625 )

[node name="HUD" parent="." instance=ExtResource( 5 )]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
